# NISAR_OGC_JOB

./: .gitignore  NISAR_OGC_JOB_Project_Presentation.pptx  README.md  User_Code_to_App_Package_Demo_Presentation.pptx  User_Code_to_App_Package_MCP_Proposal_Updated.docx  User_Code_to_OGC_App_Package_Presentation.pptx  pyproject.toml  readme.md
docs/: project_report.md
examples/: app.yaml  sample_notebook.ipynb  sample_script.py
generated_opera_package/: Dockerfile  README.md  algorithm.yml  algorithm_config.yaml  analysis.json  application.cwl  build.sh  env.yml  llm_analysis_prompt.json  opera_access_structure.py  register_dps.py  report.md  requirements.txt  run.sh  stac-input.json  stac-output.json  workflow.cwl
generated_package/: Dockerfile  README.md  algorithm.yml  algorithm_config.yaml  analysis.json  application.cwl  build.sh  env.yml  llm_analysis_prompt.json  nisar_access_subset.cwl  nisar_access_subset.py  publish_ogc.py  report.md  requirements.txt  run.sh  stac-input.json  stac-output.json  validate_package.sh  workflow.cwl
generator/: DEPENDENCY_MAPPING.md  access_evidence.py  access_plan_validator.py  access_planner.py  access_runtime.py  access_strategies.py  ai_dps_readiness.py  dependency_graph.py  dependency_map.yml  dps_readiness_scan.py  dynamic_dependency_resolver.py  final_report.py  generate_package.py  llm_recommendations.py  ogc_validator.py  readiness_summary.py  repair_plan.py  runtime_smoke.py  suggested_notebook_v2.py
input/: app.yaml  app.yml  app_opera.yaml  black_marble_veda.py  nisar_access_subset.py  opera_access_structure.py
(+39 files in other folders)
